[metadata]
license_file = LICENSE

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

# E265: block comment should start with #
# E302: expected 2 blank lines, found 0
# E266: too many leading ‘#’ for block comment
# W504: line break after binary operator
[flake8]
ignore = E265,E302,E266,W504
max-line-length = 110
