[metadata]
license_files = LICENSE

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 110
max-complexity = 18
select = B,C,E,F,W,T4,B9
